fixed minor styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,8 @@ input {
 }
 
 @media only screen and (max-width: 600px) {
-  html {
-    overflow-x: hidden;
+  .todoContainer {
+    width: 100%;
   }
   form {
     margin: auto;
